feat: Java 8 floor——record 改写为 final class、语言级降级与 release 8 编译门禁
- 9 个 main record（RequestDraft/TransportResponse/VerifyResult/WopClient.Config/
  ContentDigest.Parsed/DekPayload/EncryptHeader.Parsed/SignHeader.Parsed/CipherResult）
  改写为 final class，保留 record 等价值语义（数组字段按引用比较）
- 移除全部 Java 9+ 语法：var/instanceof 模式/switch 表达式/Map.of/List.of/Set.of/
  List.copyOf/repeat/stripTrailing/readAllBytes/BigInteger.TWO/isBlank
- URLEncoder Charset 重载（JDK 10+）→ CanonicalRequest.urlencode(String, String charsetName) seam
- 根 pom maven.compiler.release 17→8；mutation 锚点文本同步（digest 判定行）
- 测试源同步降级 + 新增 TestText.repeat 辅助与值语义矩阵测试（维持 JaCoCo 100% 门禁）
- unirest 适配器 pom 增加 pre-java11 profile（上游 unirest-java-core 4.x 字节码
  major 55，JDK<11 跳过测试执行；main 源码仍参与 release 8 编译门禁）
- fake Client 改反射 Proxy（Client.websocket 签名引用 java.net.http.WebSocket.Listener，
  Java 8 源级无法显式实现）