@@ -3,16 +3,49 @@ package com.wanlianyida.wop.crypto;
 import com.wanlianyida.wop.WopSdkException;
 
 import java.util.Arrays;
+import java.util.Objects;
 
 /**
  * F5 DEK 载荷：{@code alg$base64url(key)$base64url(iv)}（crypto spec §6.1）。
  * {@code $} 不在 base64url 字母表中，分隔符无碰撞；key/iv 解码走严格 base64url。
+ * <p>
+ * 不可变值对象（record 等价语义：equals/hashCode 按全部字段，数组字段引用比较）。
  */
-public record DekPayload(String alg, byte[] key, byte[] iv) {
+public final class DekPayload {
+
+    /** 算法族标识（RSA-OAEP-3072 / SM2）。 */
+    private final String alg;
+
+    /** 内容加密密钥（DEK）。 */
+    private final byte[] key;
+
+    /** IV。 */
+    private final byte[] iv;
+
+    public DekPayload(String alg, byte[] key, byte[] iv) {
+        this.alg = alg;
+        this.key = key;
+        this.iv = iv;
+    }
+
+    /** 算法族标识（RSA-OAEP-3072 / SM2）。 */
+    public String alg() {
+        return alg;
+    }
+
+    /** 内容加密密钥（DEK）。 */
+    public byte[] key() {
+        return key;
+    }
+
+    /** IV。 */
+    public byte[] iv() {
+        return iv;
+    }
 
     /** 编码为载荷明文串。 */
     public static String encode(DekPayload payload) {
-        if (payload == null || payload.alg == null || payload.alg.isBlank()
+        if (payload == null || payload.alg == null || payload.alg.trim().isEmpty()
                 || payload.key == null || payload.key.length == 0
                 || payload.iv == null || payload.iv.length == 0) {
             throw new WopSdkException("DEK 载荷字段不完整");
@@ -29,7 +62,7 @@ public record DekPayload(String alg, byte[] key, byte[] iv) {
         if (segments.length != 3) {
             throw new WopSdkException("DEK 载荷须为 alg$key$iv 三段（实际 " + segments.length + " 段）");
         }
-        if (segments[0].isBlank()) {
+        if (segments[0].trim().isEmpty()) {
             throw new WopSdkException("DEK 载荷 alg 段为空");
         }
         try {
@@ -43,5 +76,23 @@ public record DekPayload(String alg, byte[] key, byte[] iv) {
     @Override
     public String toString() {
         return "DekPayload[alg=" + alg + ", key=" + Arrays.toString(new byte[0]) + "-hidden]";
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) {
+            return true;
+        }
+        if (!(o instanceof DekPayload)) {
+            return false;
+        }
+        DekPayload that = (DekPayload) o;
+        return Objects.equals(alg, that.alg) && Objects.equals(key, that.key)
+                && Objects.equals(iv, that.iv);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(alg, key, iv);
     }
 }
