@@ -135,7 +135,7 @@ public final class KeyCodec {
 
     /** 入参非空守卫（空值抛配置类明确异常）。 */
     private static void requireText(String text, String kind) {
-        if (text == null || text.isBlank()) {
+        if (text == null || text.trim().isEmpty()) {
             throw new WopSdkException(kind + "为空");
         }
     }
